--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -2,7 +2,9 @@ server.port=7000
 spring.datasource.url=jdbc:postgresql://localhost:8080/podAdb
 spring.datasource.username=postgres
 spring.datasource.password=Thewipper.
-spring.jpa.hibernate.ddl-auto=create-drop
+spring.jpa.hibernate.ddl-auto=update
 spring.jpa.show-sql=false
 spring.jpa.properties.hibernate.dialect = org.hibernate.dialect.PostgreSQLDialect
-jwt.secret=springsecuritydemo
+jwt.secret=ceejay
+spring.jpa.properties.hibernate.jdbc.lob.non_contextual_creation=true
+
